feat: updated tsu api spec and added target provider
